@@ -1,0 +1,4 @@
+	.section	sect, "axG", @progbits, sectgroup, comdat
+	.cfi_startproc
+	.skip 16
+	.cfi_endproc
